<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_camera_permission"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/camera_permission_title"
            android:textColor="@color/color_333333"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="34dp"
            android:layout_marginTop="14sp"
            android:gravity="center"
            android:text="@string/camera_permission_desc"
            android:textColor="#8A8A8A" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="20dp">

            <TextView
                android:id="@+id/close_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/close_button"
                android:gravity="center"
                android:text="@string/close"
                android:textColor="#A2A2A2"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/open_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:background="@drawable/open_button"
                android:gravity="center"
                android:text="@string/open"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>