<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_view"
        android:layout_width="1dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/skip_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:paddingStart="14dp"
        android:paddingEnd="14dp"
        android:textSize="12sp"
        android:text="@string/wait_skip"
        android:background="@drawable/skip_button_gray"
        android:textColor="@color/color_AEAEAE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_view" />

    <ImageView
        android:id="@+id/guide_desc_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="206dp"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@mipmap/connect_guide_desc"/>

    <TextView
        android:id="@+id/guide_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="54dp"
        android:paddingEnd="54dp"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/color_333333"
        android:layout_marginTop="52dp"
        android:text="@string/connect_guide_desc"
        app:layout_constraintTop_toBottomOf="@+id/guide_desc_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    
    <Button
        android:id="@+id/try_it_now_button"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@mipmap/button_connect_guide"
        app:layout_constraintTop_toBottomOf="@id/guide_desc_text"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/try_it_now"
        android:textColor="@color/white"
        android:layout_marginTop="58dp"
        android:layout_height="56dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>