<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_view"
        android:layout_width="1dp"
        android:layout_height="24dp" />

    <ImageView
        android:id="@+id/pic_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_99000000" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_view"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/icon_back_white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back_image"
        android:layout_centerHorizontal="true"
        android:text="@string/orc"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/ocr_result_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:paddingHorizontal="38dp"
        android:layout_below="@+id/back_image"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/ocr_result_button">

        <TextView
            android:id="@+id/copy_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/easy_copy"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_gravity="center"
            android:background="@color/white" />

        <TextView
            android:id="@+id/retry_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/retry"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</RelativeLayout>