<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_view"
        android:layout_width="1dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/status_view"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/icon_back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/back_image"
        android:layout_centerInParent="true"
        android:text="@string/result"
        android:textColor="@color/color_333333"
        android:textSize="16sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/translate_fail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/back_image"
        android:layout_above="@+id/ad_layout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/fail_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:src="@mipmap/icon_result_fail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fail_desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:text="@string/result_fail_tip"
            android:textColor="@color/color_333333"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fail_image" />

        <Button
            android:id="@+id/try_again_button"
            android:layout_width="204dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@mipmap/result_fail_button"
            android:text="@string/try_it_again"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fail_desc_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@+id/try_again_button">

            <androidx.cardview.widget.CardView
                android:id="@+id/connect_card_view"
                android:layout_width="0dp"
                android:layout_height="122dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:elevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@mipmap/icon_vpn" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:text="@string/vpn"
                        android:textColor="@color/color_103D45"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/ocr_card_view"
                android:layout_width="0dp"
                android:layout_height="122dp"
                android:layout_margin="12dp"
                android:layout_weight="1"
                android:elevation="4dp"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/icon_ocr_t" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dp"
                        android:src="@mipmap/home_ocr_translate" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/translate_result_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad_layout"
        android:layout_below="@+id/back_image"
        android:layout_marginTop="26dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/former_language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/former_word_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/color_333333"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_E1FBFF"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/translate_language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_0BB8D6"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/translate_word_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/color_0BB8D6"
                        android:textSize="16sp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Placeholder
                android:layout_width="1dp"
                android:layout_height="16dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.example.translate.ui.AdLayout
        android:id="@+id/ad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>