<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/status_view"
        android:layout_width="1dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@mipmap/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate"
        android:textColor="@color/color_333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/translate_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/back_image">

        <androidx.cardview.widget.CardView
            android:id="@+id/translate_card_view"
            android:layout_width="match_parent"
            android:layout_height="323dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/translate_head_layout"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:background="@color/color_4FD4FF">

                    <LinearLayout
                        android:id="@+id/source_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:layout_toStartOf="@+id/switch_image"
                        android:gravity="center_vertical">

                        <TextView
                            android:id="@+id/left_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:src="@mipmap/icon_translate_right" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/switch_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@mipmap/icon_switch" />

                    <LinearLayout
                        android:id="@+id/target_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_toEndOf="@+id/switch_image"
                        android:gravity="center_vertical|end">

                        <TextView
                            android:id="@+id/right_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            android:src="@mipmap/icon_translate_right" />
                    </LinearLayout>

                </RelativeLayout>

                <EditText
                    android:id="@+id/translate_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/translate_head_layout"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="48dp"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/translate_input_tip"
                    android:padding="16dp"
                    android:textColor="@color/color_B3B3B3"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/delete_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/translate_head_layout"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:src="@mipmap/icon_close"
                    android:visibility="gone" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <com.example.translate.ui.AdLayout
        android:id="@+id/ad_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <View
        android:id="@+id/guide_bg_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/click_translate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:text="@string/click_translate"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/translate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/translate_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="73dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/translate_button"
        android:text="@string/translate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/translate_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>